--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,14 @@
         "out": true,
         "bin": true,
         "*.*": true
+    },
+    "mcp": {
+        "servers": {
+            "context7": {
+            "type": "stdio",
+            "command": "npx",
+            "args": ["-y", "@upstash/context7-mcp"]
+            }
+        }
     }
 }
