--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         ".vscode": true
     },
     "chat.promptFilesLocations": {
+        "src": true,
         ".vscode": true
     },
     "[instructions]": {
